fixed title spacing

--- a/src/Styles/Components/Header.css
+++ b/src/Styles/Components/Header.css
@@ -1,5 +1,4 @@
 .header {
-  position: relative;
   height: 40vh;
   color: #fff;
   display: flex;
@@ -10,11 +9,12 @@
 }
 
 .background-container {
-  position: absolute;
-  top: 0;
-  left: 0;
+  padding:  8%;
+
   width: 100%;
-  height: 106%;
+display: flex;
+justify-content: center;
+align-items: center;
   background-image: url("../../Assets/oooscillate.svg");
   /* background-attachment: fixed; */
   background-position: center;
