--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,10 @@
   --numscale-99: 99; */
 
   /* Frame 4 */
-
+--margin-percentage: 8%;
+--margin-desktop: 32px;
+--margin-tablet: 24px;  
+--margin-mobile: 16px;
 
   --token-border-radius-xs: 6px;
   --token-border-radius-s: 8px;
